fixed hover state and submen u popping pout on mobile

--- a/themes/ICEF/sass/_navigation.scss
+++ b/themes/ICEF/sass/_navigation.scss
@@ -251,8 +251,12 @@ a {
 
 		a:hover {
 			text-decoration: none;
-			color: $brand_colour_darkgrey;
+			color: $brand_colour_lightgold;
 		 	border-bottom: 4px solid $brand_colour_mediumgold;
+
+			 @include desktop {
+				 color: $brand_colour_darkgrey;
+			 }
 		}
 	}
 
@@ -317,6 +321,8 @@ a {
 	z-index: 2;
 	list-style-type: none;
 	text-align: center;
+	display: none;
+
 	
 	li {
 		height: auto;
@@ -336,14 +342,13 @@ a {
 	}
 }
 
-.menu-item-261{
-	
-}
-
 .menu-item-261:hover{
 	.sub-menu{
-		position: absolute;
-		display: inline-block;
+
+		@include desktop {
+			position: absolute;
+			display: inline-block;
+		}
 	}
 }
 
